# real-NN-MPCC

src/nn-mpcc/: CMakeLists.txt  README.md  config.h  config.json  main.cpp  package.xml  types.h
src/nn-mpcc/Interfaces/: hpipm_interface.cpp
src/nn-mpcc/MPC/: mpc.cpp  mpc.h
src/nn-mpcc/Model/: integrator.cpp  integrator.h  model.cpp  model.h  model.pt  nn.cpp  nn.h
src/nn-mpcc/Params/: bounds.json  config.yaml  model.json  normalization.json  params.cpp  params.h  path.json
src/nn-mpcc/Plotting/: plotting.cpp  plotting.h
src/nn-mpcc/Track/: 43_2*3.json  ellipse_4*8.json  ellipse_5*10.json  ellipse_6*16.json
src/nn-mpcc/launch/: file_test.launch  mpcc.launch
